--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #01050F;
+    background: #235ced;
     font-size: 1.2rem;
     font-family: Arial, Helvetica, sans-serif;
+    background-image: url('./img/backgrounds/noise.png');
+    background-repeat: repeat;
+    background-size: contain;
 }
 
 .container {
