--- a/css/styles.css
+++ b/css/styles.css
@@ -22,12 +22,15 @@ body {
 }
 
 .circle {
+    width: 200px;
+    height: 200px;
+    background-color: rgba(245, 245, 220, 0.8); /* Cream/white color with reduced opacity */
+    border-radius: 50%;
     transition: 5s ease-in, 4s ease-out;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
 
 .breathing-text {
     position: absolute;
@@ -61,6 +64,7 @@ body {
     z-index: 2;
     margin-top: 35px;
 }
+
 #phrase {
     color: #F7DCB8;
     display: flex;
